# chat-rs

./: .gitignore  .mcp.json  CHANGELOG.md  CHAT.md  CLAUDE.md  Cargo.toml  README.md  SPEC.md  clippy.toml  compose.yml  rustfmt.toml
.cargo/: audit.toml
.claude/: settings.json
.claude/hooks/: cargo-check.sh  cargo-fmt.sh
.github/: copilot-instructions.md
.github/workflows/: lint-dart.yml  lint-rust.yml  lint-typescript.yml
config/: config.dev.toml  config.example.toml
crates/chat_protocol/: Cargo.toml
crates/chat_protocol/benches/: codec_bench.rs
crates/chat_protocol/src/: codec.rs  error.rs  frames.rs  lib.rs  types.rs
crates/chat_protocol/src/codec/: frame.rs  header.rs  message.rs  mod.rs  payload.rs  wire.rs
crates/chat_protocol/src/types/: chat.rs  error.rs  frame.rs  message.rs  mod.rs  user.rs
crates/chat_protocol/tests/: codec_tests.rs
crates/chat_server/: Cargo.toml
crates/chat_server/benches/: server_bench.rs
crates/chat_server/migrations/: 001_initial.sql
crates/chat_server/src/: app.rs  config.rs  lib.rs  main.rs  state.rs
crates/chat_server/src/db/: mod.rs  queries.rs
crates/chat_server/src/handlers/: auth.rs  message.rs  mod.rs  subscribe.rs
crates/chat_server/src/ws/: dispatch.rs  mod.rs  session.rs
crates/chat_server/tests/: integration.rs  proptest_frames.rs
crates/chat_server/tests/common/: mod.rs
docs/: architecture.md  chats.md  client.md  codec.md  codegen.md  crossplatform.md  database.md  error-codes.md  future-plans.md  goals.md  ideas.md  messages.md  milestones.md  performance.md  protocol.md  server.md  users.md  xtask.md
xtask/: Cargo.toml
xtask/src/: check.rs  ci.rs  dev.rs  main.rs
xtask/src/codegen/: dart.rs  ir.rs  mod.rs  parser.rs  typescript.rs
